--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,7 @@ spring.jpa.hibernate.ddl-auto=update
 #create: creates the schema, destroying previous data.
 #create-drop: drop the schema at the end of the session.
 
-spring.jpa.show-sql: true
+#spring.jpa.show-sql: false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+bezkoder.app.jwtSecret= bezKoderSecretKey
+bezkoder.app.jwtExpirationMs= 86400000
